# A-J

./: .gitignore  002_prompting_completed (1).ipynb  CLAUDE.md  CORRECTED_EXPERIMENTAL_RESULTS.md  EXPERIMENTAL_RESULTS.md  LICENSE  README.md  analysis_results_table.py  analyze_phase1_summary.py  condition_analysis.csv  dataset.json  debug_extraction.py  env.example  main.py  main_phase1.py  main_phase2.py  model_condition_analysis.csv  my_prompt_johns_framework_results.csv  output.html  output.json  phase1_analysis_report.md  phase1_comprehensive_analysis.py  phase1_comprehensive_analysis_report.md  problem_level_analysis.csv  pyproject.toml  test_claude_opus.py  test_parsing.py
analysis/: ANALYSIS_USAGE.md  PHASE2_RESULTS_REPORT.md  README.md  analyze_phase2_results.py  comprehensive_verification.py  generate_phase1_reports.py  generate_phase2_reports.py
config/: __init__.py  experiments.py  experiments2.py
core/: __init__.py  data_manager.py  data_models.py  llm_providers.py  persistence.py  utils.py
data/: README.md
engine/: __init__.py  experiment_runner.py
old/: latent_thinking.ipynb  latent_thinking.py  my_prompt_johns_framework.py  phase1_continued_20250730_134714.csv  phase1_continued_20250730_134714_FIXED.csv  phase1_thinking-experiment_20250730_123803.csv  phase2_transplant-test_20250730_153844.csv  phase2_transplant-test_20250730_170247.csv  results.csv  results2.csv  results3.csv  step3_test_with_judge.py  verify_number_transfer.py
scratch/: john_scratch.ipynb
tests/: __init__.py  test_core_modules.py  test_experiment_runner.py
(+17 files in other folders)
