[project]
name = "a-j"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "pandas>=2.3.1",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    "pyright>=1.1.403",
    "ruff>=0.12.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pydantic>=2.10.3",
]
